--- a/grading.html
+++ b/grading.html
@@ -14,18 +14,19 @@
      <h3> Your wallet address: </h3>
      <h3 id = "display"> </h3>
      
-     <h3> Enter sport below: </h3>
+     Enter sport:
      <input type = "number" id = "sport">
-     <h3> Enter league below: </h3>
+     Enter league:
      <input type = "number" id = "league">
-     <h3> Enter event below: </h3>
+     Enter event:
      <input type = "number" id = "event">
-     <h3> Enter period below: </h3>
+     <br>
+     Enter period:
      <input type = "number" id = "period">
-     <h3> Enter mkt below: </h3>
+     Enter mkt:
      <input type = "number" id = "mkt">
-     <h3> Enter player below: blank for no player</h3>
-     <input type = "number" id = "player">
+     Enter player:
+     <input type = "number" id = "player"> blank for no player
      <h3> If the result is a push, click the button below</h3>
      <button onclick = "wagerPush()"> Push this wager </button>
      <h3> Enter winning outcome number - 0 or 1</h3>
