add solflare wallet, tidy phantom connection

--- a/grading.html
+++ b/grading.html
@@ -9,8 +9,9 @@
      <script src = "https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
      <script src = "script.js"> </script>
      
-     <h3> Connect to Phantom Wallet before grading </h3>
+     <h3> Connect to a wallet before grading </h3>
      <button onclick = "phantom_connect()"> Connect to phantom wallet </button>
+     <button onclick = "solflare_connect()"> Connect to solflare wallet </button>
      <h3> Your wallet address: </h3>
      <h3 id = "display"> </h3>
      
