--- a/setDelay.html
+++ b/setDelay.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <button onclick = "window.solana.connect()"> Connect Wallet </button>
+        <button onclick = "solflareConnect()"> Connect to Solflare if phantom sucks </button>
         <p id = "addr"> </p>
         <h1> Admin pubkey must be GfAjAjpesvWYHDTNLUQ7ES9YkSPiuHGK5dAzGsPptetk </h1>
         <h2> Seconds to delay </h2>
@@ -14,7 +15,7 @@
         <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
         <script>
             var programID = new solanaWeb3.PublicKey("9uReBEtnYGYf1oUe4KGSt6kQhsqGE74i17NzRNEDLutn");
-            var connection = new solanaWeb3.Connection("https://solana-mainnet.core.chainstack.com/db4ce305e4c9e0a90e069f0fe3a5abf7");
+            var connection = new solanaWeb3.Connection("https://api.devnet.solana.com");
             var blankPubkey = "11111111111111111111111111111111";
 
             function showWallet(){
@@ -22,9 +23,14 @@
             }
             window.solana.on("connect", showWallet);
 
+            async function solflareConnect(){
+                await window.solflare.connect();
+                document.getElementById("addr").innerHTML = window.solflare.publicKey.toBase58();
+            }
+
             async function genAccInstr(){
                 let rentExemptVal = 1000000000 * 0.0009048;
-                let seed = 'purebetDelay';
+                let seed = 'purebetDelay' + Math.random() * 1000000000000;
                 let newAcc = await solanaWeb3.PublicKey.createWithSeed(window.solana.publicKey, seed, programID);
                 return {
                     pubkey: newAcc,
@@ -65,16 +71,17 @@
                 let setDelayInstr = new solanaWeb3.TransactionInstruction({
                     keys: [
                         {pubkey: delayAcc, isSigner: false, isWritable: true },
-                        {pubkey: window.solana.publicKey, isSigner: true, isWritable: false}
+                        {pubkey: window.solflare.publicKey/*window.solana.publicKey*/, isSigner: true, isWritable: false}
                     ],
                     programId: programID,
                     data: new Uint8Array([parseInt(document.getElementById("seconds").value)]),
                 });
                 tx.add(setDelayInstr);
-                tx.feePayer = window.solana.publicKey;
+                tx.feePayer = window.solflare.publicKey; //window.solana.publicKey;
                 let blockInfo = await connection.getLatestBlockhash(); 
                 tx.recentBlockhash = blockInfo.blockhash;
-                let signed = await window.solana.signTransaction(tx);
+                let signed = await window.solflare.signTransaction(tx);
+                //let signed = await window.solana.signTransaction(tx);
                 let signature = await connection.sendRawTransaction(signed.serialize());
                 await connection.confirmTransaction(signature);
                 document.getElementById("sig").setAttribute("href", "https://explorer.solana.com/tx/" + signature + "?cluster=devnet");
