--- a/setDelay.html
+++ b/setDelay.html
@@ -15,7 +15,7 @@
         <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
         <script>
             var programID = new solanaWeb3.PublicKey("9uReBEtnYGYf1oUe4KGSt6kQhsqGE74i17NzRNEDLutn");
-            var connection = new solanaWeb3.Connection("https://api.devnet.solana.com");
+            var connection = new solanaWeb3.Connection("https://solana-mainnet.core.chainstack.com/db4ce305e4c9e0a90e069f0fe3a5abf7");
             var blankPubkey = "11111111111111111111111111111111";
 
             function showWallet(){
