handle both obfuscated and non obfuscated ids

--- a/grading.html
+++ b/grading.html
@@ -18,8 +18,9 @@
      <input type = "number" id = "sport">
      Enter league:
      <input type = "number" id = "league">
-     Enter event (non obfuscated id):
+     Enter event:
      <input type = "number" id = "event">
+     Is the event ID obfuscated? <input type = "checkbox" id = "isObfuscated">
      <br>
      Enter period:
      <input type = "number" id = "period">
