--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title> pbv2 test</title>
     </head>
     <body>
-        <h1><a href = "view.html"> view bets </a></h1>
+        <h1><a href = "https://purebet.github.io/betexplorer"> New Bet Explorer </a></h1>
+        <h1><a href = "view.html"> Classic Bet Explorer </a></h1>
         <h1><a href = "setDelay.html"> Set cancelation delay </a></h1>
         <h1><a href = "grading.html"> Grade bet </a></h1>
     </body>
