--- a/betlog.html
+++ b/betlog.html
@@ -94,7 +94,9 @@
                     }
                 }
 
-                console.log(payload);
+                let call = new XMLHttpRequest();
+                call.open("POST", "https://p43l0w1hu4.execute-api.ap-northeast-1.amazonaws.com/default/pendingBetsV2", false);
+                call.send(JSON.stringify(payload));
                 //make an api call that is  handled by pending bets lambda
                 document.getElementById("msg").innerHTML = "done";
             }
