--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <title> pbv2 test</title>
     </head>
     <body>
-        <h1><a href = "https://purebet.github.io/betexplorer"> New Bet Explorer </a></h1>
-        <h1><a href = "view.html"> Classic Bet Explorer </a></h1>
-        <h1><a href = "setDelay.html"> Set cancelation delay </a></h1>
-        <h1><a href = "grading.html"> Grade bet </a></h1>
+        <h1><a href = "https://purebet.github.io/betexplorer" target = "_blank"> New Bet Explorer </a></h1>
+        <h1><a href = "view.html" target = "_blank"> Classic Bet Explorer </a></h1>
+        <h1><a href = "setDelay.html" target = "_blank"> Set cancelation delay </a></h1>
+        <h1><a href = "grading.html" target = "_blank"> Grade bet </a></h1>
     </body>
 </html>
