--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1><a href = "view.html" target = "_blank"> Classic Bet Explorer </a></h1>
         <h1><a href = "setDelay.html" target = "_blank"> Set cancelation delay </a></h1>
         <h1><a href = "grading.html" target = "_blank"> Grade bet </a></h1>
+        <h1><a href = "betlog.html" target = "_blank"> Write bet that betplacerv2 missed to betlog </a></h1>
     </body>
 </html>
