--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> pbv2 test</title>
+        <title> Admin V2</title>
     </head>
     <body>
         <h1><a href = "https://purebet.github.io/betexplorer" target = "_blank"> New Bet Explorer </a></h1>
