--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1><a href = "grading.html" target = "_blank"> Grade bet </a></h1>
         <h1><a href = "betlog.html" target = "_blank"> Write bet that betplacerv2 missed to betlog </a></h1>
         <h1><a href = "match.html" target = "_blank"> Emergency Match </a></h1>
+        <h1><a href = "gradeAcc.html" target = "_blank"> Grade just 1 bet </a></h1>
     </body>
 </html>
