notify of tx confirmation failure

--- a/gradeAcc.html
+++ b/gradeAcc.html
@@ -108,13 +108,17 @@
                 transaction.recentBlockhash = blockInfo.blockhash;
                 let signed = await window.solana.signTransaction(transaction);
                 let signature = await connection.sendRawTransaction(signed.serialize());
-                await connection.confirmTransaction(signature);
-                let bettor = bettor0.toBase58() == pbmm ? bettor1 : bettor0;
-                let call = new XMLHttpRequest();
-                let url = "https://p43l0w1hu4.execute-api.ap-northeast-1.amazonaws.com/default/pendingBetsV2?grade=" + 
-                    pubkey + "&for=" + bettor + "&winner=" + instrData[20];
-                call.open("GET", url);
-                call.send();
+                try{
+                    await connection.confirmTransaction(signature);
+                    let bettor = bettor0.toBase58() == pbmm ? bettor1 : bettor0;
+                    let call = new XMLHttpRequest();
+                    let url = "https://p43l0w1hu4.execute-api.ap-northeast-1.amazonaws.com/default/pendingBetsV2?grade=" + 
+                        pubkey + "&for=" + bettor + "&winner=" + instrData[20];
+                    call.open("GET", url);
+                    call.send();
+                } catch(err){
+                    alert(err);
+                }
                 document.getElementById("sig").setAttribute("href", "https://explorer.solana.com/tx/" + signature);
                 document.getElementById("sig").innerHTML = signature;
             }
